--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                 gamepad-controls="flyEnabled: true"
                 sound="src: url(assets/321103__nsstudios__blip1.wav);
                        on: gamepadbuttondown:0">
+       <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+
+</audio>
       </a-entity>
      
     <a-sky color="#000000"></a-sky>
