--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
                 sound="src: url(assets/321103__nsstudios__blip1.wav);
                        on: gamepadbuttondown:0">
        <audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="music.mp3" type="audio/mpeg">
 
 </audio>
       </a-entity>
