--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
                 position="0 1 0"
                 look-controls
                 gamepad-controls="flyEnabled: true"
-                sound="src: url(assets/321103__nsstudios__blip1.wav);
+                sound="src: url(music);
                        on: gamepadbuttondown:0">
-       <audio controls>
-  <source src="music.mp3" type="audio/mpeg">
-
-</audio>
+     
       </a-entity>
      
     <a-sky color="#000000"></a-sky>
