--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 position="0 1 0"
                 look-controls
                 gamepad-controls="flyEnabled: true"
-                sound="src: url(music);
+                sound="src: url(https://vgmsite.com/soundtracks/cabal-online-bgm/uxenanglpo/Dungeon%20Theme%20-%20F.%20Island.mp3);
                        on: gamepadbuttondown:0">
      
       </a-entity>
