--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
                 position="0 1 0"
                 look-controls
                 gamepad-controls="flyEnabled: true"
-                sound="src: url(https://vgmsite.com/soundtracks/cabal-online-bgm/uxenanglpo/Dungeon%20Theme%20-%20F.%20Island.mp3);
-                       on: gamepadbuttondown:0">
+                <source src="music.mp3" type="audio/mpeg">
      
       </a-entity>
      
