--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
   </head>
   <body>
-    <audio controls autoplay>
+    <audio controls loop>
  
   <source src="music.mp3" type="audio/mpeg">
 
-</audio>  
+     </audio>  
     <a-scene>
      
      <a-entity camera
